--- a/.github/workflows/main_clientapp.yml
+++ b/.github/workflows/main_clientapp.yml
@@ -25,10 +25,10 @@ jobs:
       - name: Build (if needed)
         run: npm run build --if-present
 
-      - name: Deploy to Azure Web App
+     - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'clientapp'  # 👈 your Azure App name
+          app-name: 'clientapp'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
           package: .
