--- a/.github/workflows/main_clientapp.yml
+++ b/.github/workflows/main_clientapp.yml
@@ -17,12 +17,20 @@ jobs:
       contents: read #This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+
+      - name: Debug environment
+        run: |
+          echo "GitHub workspace: $GITHUB_WORKSPACE"
+          echo "Current directory: $(pwd)"
+          echo "Directory contents:"
+          ls -la
 
       - name: npm install, build, and test
         run: |
@@ -72,4 +80,9 @@ jobs:
           app-name: 'clientapp'
           slot-name: 'Production'
           package: .
-          
+
+      - name: 'Set production environment variable'
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            az webapp config appsettings set --name clientapp --resource-group clientapp --settings NODE_ENV=production
